CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.20

	- The cupsaddsmb program didn't export the new CUPS
	  driver for Windows properly (STR #390)
	- The ppdOpen() functions did not issue an error when a
	  translation string exceeded the maximum allowed by the
	  Adobe PPD specification (STR #399)
	- The default landscape orientation was not the same as
	  that defined in the PPD file (STR #397)
	- Updated the pstoraster patch files and CUPS driver to
	  work with Ghostscript 8 (STR #402)
	- The hpgltops filter did not skip PJL commands (STR
	  #379)


CHANGES IN CUPS V1.1.20rc6

	- "lp -i jobid -H restart" would often return an error
	  even though the job restarted successfully (STR #362)
	- The scheduler did not check for invalid allow/deny
	  addresses such as "11.22.33.44/24". It now masks off
	  the extra address bits and logs a warning message in
	  the error_log file (STR #337)
	- The cupstestppd utility now checks for missing
	  ImageableArea and PaperDimension attributes for each
	  defined PageSize (STR #365)
	- The IPP code did not wait for a reply indefinitely on
	  HTTP connections in "blocking" mode (STR #377)
	- The web interfaces did not rewrite the default printer
	  URI properly (STR #299 and #369)
	- The LPD backend passed the C and L commands in the
	  wrong order (STR #378)
	- The Dymo label printer driver did not set the label
	  length properly (STR #373)
	- The scheduler did not support job IDs higher than
	  99999 (STR #371)
	- The Visual C++ project files did not work (STR #366)
	- The scheduler's cupsLangSeek() function did not reset
	  the "EOF" flag, preventing compressed files from being
	  typed properly in some cases (STR #368)
	- The cupsLangGet() cache was only used if the locale
	  name provided an explicit character set name (STR
	  #354)
	- The CUPS API convenience functions did not call
	  cupsLangFree() when they were done with the
	  localization data (STR #354)
	- The scheduler did not return the